[FIX] Color in play/pause button when dark mode is enable/disable
Fixed play/pause button color change when dark mode is activated via the button. Also, the font and some of the details (boders) in the light mode were corrected.

--- a/css/clockStyle.css
+++ b/css/clockStyle.css
@@ -2,6 +2,7 @@
     align-self: center;
     background: var(--light-gray);
     border-radius: 30px;
+    border: 2px solid #f7f7f8;
     box-shadow: 20px 20px 40px var(--shadow-color), -20px -20px 40px var(--light-color);
 }
 
