--- a/css/stopwatchStyle.css
+++ b/css/stopwatchStyle.css
@@ -49,7 +49,8 @@
     align-self: center;
     justify-content: center;
     align-items: center;
-    border: transparent solid 5px;
+    border: 0;
+    /*border: transparent solid 5px;*/
     cursor: pointer;
     height: 80px;
     width: 80px;
@@ -71,12 +72,12 @@
 
 .reset-button {
     align-self: center;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Neue Plak W01', sans-serif;
     font-size: 16px;
-    color: #808080;
+    color: var(--text-color);
     padding: 0.8em 2em;
     border-radius: 50px;
-    border: none;
+    border: 2px solid #f7f7f8;
     outline: none;
     cursor: pointer;
     transition: 0.2s ease-in-out;
