--- a/css/timerStyle.css
+++ b/css/timerStyle.css
@@ -10,11 +10,12 @@
     width: 347.33px;
     height: 400px;
     padding: 2em 3em;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Neue Plak W01', sans-serif;
     font-size: 16px;
-    color: #808080;
-    background-color: #f0f0f3;
+    color: var(--text-color);
+    background-color: var(--light-gray);
     border-radius: 30px;
+    border: 2px solid #f7f7f8;
     box-shadow: 20px 20px 40px var(--shadow-color), -15px -15px 30px var(--light-color);
     visibility: hidden;
     opacity: 0;
@@ -34,10 +35,11 @@
 }
 
 #minimize {
-    color: #808080;
+    color: var(--text-color);
     border: none;
     outline: none;
     cursor: pointer;
+    -webkit-appearance: none;
 }
 
 .timer-settings-box div div {
@@ -52,15 +54,18 @@
 .timer-settings-box div div button {
     height: 45px;
     width: 45px;
-    color: #808080;
+    /*background: transparent;*/
+    background: var(--light-gray);
+    color: var(--text-color);
     border: none;
     outline: none;
     cursor: pointer;
+    -webkit-appearance: none;
     border-radius: 150px;
 }
 
 .timer-settings-box div div button:active {
-    color: #000;
+    color: #111;
     box-shadow: inset 5px 5px 19px var(--shadow-color), inset -5px -5px 19px var(--light-color);
 }
 
@@ -71,14 +76,15 @@
 
 .timer-settings-box .accept-button {
     align-self: flex-end;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Neue Plak W01', sans-serif;
     font-size: 16px;
-    color: #808080;
+    color: var(--text-color);
     padding: 0.8em 2em;
     border-radius: 50px;
-    border: none;
+    border: 2px solid #f7f7f8;
     outline: none;
     cursor: pointer;
+    -webkit-appearance: none;
     transition: 0.2s ease-in-out;
     background: var(--light-gray);
     box-shadow: 20px 20px 40px var(--shadow-color), -10px -10px 25px var(--light-color);
